fix CORS: properly parse comma-separated origins from env vars